# SFML-CG

./: CMakeLists.txt
src/: breakout.cpp  dasher.cpp  defaults.hpp  draw_shapes.cpp  entities.cpp  entities.hpp  readme.txt
step1/: dasher.cpp  readme.txt
step10/: defaults.hpp  entities.cpp  readme.txt
step2/: dasher.cpp  readme.txt
step3/: dasher.cpp  readme.txt
step4/: dasher.cpp  readme.txt
step5/: dasher.cpp  readme.txt
step6/: dasher.cpp  readme.txt
step7/: dasher.cpp  readme.txt
step8/: entities.cpp  entities.hpp  readme.txt
step9/: dasher.cpp  defaults.hpp  readme.txt
